# apps.homemadebycvg

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.container.md  README.md  TODO.md  apps.yaml  block.conf  entrypoint.sh  hosted-flasks.yaml  nginx.conf  pyproject.toml  requirements.base.txt  requirements.txt  strip-env.sh  supervisord.conf
analysis/: api-roomz.md  functional.md
debug/debug/: __init__.py  data.py
docs/: MONITORING_SETUP.md  PODMAN_REFERENCE.md  SCALING_STRATEGY.md
frontpage/: __init__.py  hosted-flasks.yaml  pyproject.toml
frontpage/static/: site.webmanifest
frontpage/templates/: index.html
hello/: .env  __init__.py
homemadebycvg/: makes.yaml  requirements.txt
monitoring/: README.md  __init__.py  app_metrics.py  grafana.ini  loki-config.yml  prometheus.yml  promtail-config.yml  security_monitor.py
monitoring/grafana/dashboards/: applications.json  infrastructure.json  security.json  system-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
parking/: __init__.py
reporting/roomz-setup/: summary.md
roomz/: pyproject.toml
schema-tools/: __init__.py  requirements.base.txt
